--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -5,7 +5,7 @@
     <string name="firstname">आपलं नाव </string>
     <string name="middlename">आई / वडील /पतीचे नाव</string>
     <string name="lastname">आपलं आडनाव </string>
-    <string name="language">English</string>
+    <string name="language">E | English</string>
     <string name="or">और </string>
     <string name="previous">पीछे </string>
     <string name="enterage">आयु दर्ज कीजिए </string>
