--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="firstname">First Name</string>
     <string name="middlename">Middle Name</string>
     <string name="lastname">Last Name</string>
-    <string name="language">English</string>
+    <string name="language">E | English</string>
 
     <string name="or">OR</string>
     <string name="selectlanguage">SELECT LANGUAGE</string>
