fouth day update

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,7 +32,8 @@
     <string name="profiledetails">PROFILE DETAILS</string>
     <string name="selectgender">SELECT GENDER</string>
     <string name="title_activity_design">DesignActivity</string>
-    <string name="terms">Terms and Conditions</string>
+    <string name="terms">I would like to be a primary member of Maharashtra State Education Revolutionary Organization. \n I am not a member of any other recognized political party. I will continue to support the agitations for the just rights of teachers and for the benefit of education. \n For the two years 2021-2023, I am requesting to get the primary membership of the Maharashtra State Education Revolutionary Organization.
+</string>
 
 
 </resources>
