--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,8 @@
     <string name="membership">Primary Membership Form</string>
     <string name="editprofile">Edit Profile</string>
     <string name="pincode">Pin Code</string>
-    <string name="terms">Terms and Conditions</string>
+    <string name="terms">I would like to be a primary member of Maharashtra State Education Revolutionary Organization. \nI am not a member of any other recognized political party. \nI will continue to support the agitations for the just rights of teachers and for the benefit of education. \nFor the two years 2021-2023, I am requesting to get the primary membership of the Maharashtra State Education Revolutionary Organization.
+</string>
     <string name="enterage">Enter Age</string>
     <string name="start">START</string>
     <string name="Version">V  2.0</string>
