--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -32,6 +32,6 @@
     <string name="pincode">पिन कोड</string>
     <string name="selectgender">लिंग चुनें</string>
     <string name="title_activity_design">DesignActivity</string>
-    <string name="terms">मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व घेण्याची इच्छा आहे.\nमी इतर कोणत्याही मान्यताप्राप्त राजकीय पक्षाचा सदस्य नाही. मी महाराष्ट्र राज्य शिक्षण क्रांती संघटनेची घटना,नियम, ध्येय धोरणे व शिस्त यांचे पालन करून पक्षाशी प्रामाणिक राहण्याचे वचन देत आहे.\n शिक्षकांच्या न्याय्य हक्कांसाठी व शिक्षण हितासाठी संघटनेमार्फत उभारल्या जाणाऱ्या आंदोलनांना माझे सहकार्य राहील. सन 2021-2023 या दोन वर्षाकरिता मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या पक्षाचे प्राथमिक सदस्यत्व मिळावे ही विनंती करीत आहे.</string>
+    <string name="terms">मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व घेण्याची इच्छा आहे.\nमी इतर कोणत्याही मान्यताप्राप्त संघटनेचा सदस्य नाही. मी महाराष्ट्र राज्य शिक्षण क्रांती संघटनेची घटना,नियम, ध्येय धोरणे व शिस्त यांचे पालन करून पक्षाशी प्रामाणिक राहण्याचे वचन देत आहे.\n शिक्षकांच्या न्याय्य हक्कांसाठी व शिक्षण हितासाठी संघटनेमार्फत उभारल्या जाणाऱ्या आंदोलनांना माझे सहकार्य राहील. सन 2021-2023 या दोन वर्षाकरिता मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व मिळावे ही विनंती करीत आहे.</string>
 
 </resources>
