--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -14,5 +14,6 @@
     <string name="membership">प्रार्थमिक सदस्य नोंदणी अर्ज</string>
     <string name="pincode">पिन कोड</string>
     <string name="terms">मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व घेण्याची इच्छा आहे.\n\nमी इतर कोणत्याही मान्यताप्राप्त संघटनेचा सदस्य नाही. मी महाराष्ट्र राज्य शिक्षण क्रांती संघटनेची घटना,नियम, ध्येय धोरणे व शिस्त यांचे पालन करून पक्षाशी प्रामाणिक राहण्याचे वचन देत आहे.\n \nशिक्षकांच्या न्याय्य हक्कांसाठी व शिक्षण हितासाठी संघटनेमार्फत उभारल्या जाणाऱ्या आंदोलनांना माझे सहकार्य राहील. सन 2021-2023 या दोन वर्षाकरिता मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व मिळावे ही विनंती करीत आहे.</string>
+    <string name="preference_file_key">skVerified</string>
 
 </resources>
