--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
 </string>
     <string name="next">NEXT </string>
     <string name="profiledetails">PROFILE DETAILS</string>
+    <string name="preference_file_key">skVerified</string>
 
 </resources>
