--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -5,15 +5,21 @@
     <string name="middlename">आई / वडील /पतीचे नाव</string>
     <string name="lastname">आपलं आडनाव </string>
     <string name="language">E | English</string>
-    <string name="nameerror">Enter a valid name</string>
-    <string name="mobileerror">Enter a valid mobile</string>
+    <string name="nameerror">वैध नाव प्रविष्ट करा</string>
+    <string name="mobileerror">वैध Mobile प्रविष्ट करा</string>
     <string name="profiledetails">वैयक्तिक माहिती</string>
     <string name="address">कायमचा पत्ता </string>
     <string name="district">जिल्हा</string>
     <string name="taluka">तालुका</string>
     <string name="membership">प्रार्थमिक सदस्य नोंदणी अर्ज</string>
     <string name="pincode">पिन कोड</string>
-    <string name="terms">मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व घेण्याची इच्छा आहे.\n\nमी इतर कोणत्याही मान्यताप्राप्त संघटनेचा सदस्य नाही. मी महाराष्ट्र राज्य शिक्षण क्रांती संघटनेची घटना,नियम, ध्येय धोरणे व शिस्त यांचे पालन करून पक्षाशी प्रामाणिक राहण्याचे वचन देत आहे.\n \nशिक्षकांच्या न्याय्य हक्कांसाठी व शिक्षण हितासाठी संघटनेमार्फत उभारल्या जाणाऱ्या आंदोलनांना माझे सहकार्य राहील. सन 2021-2023 या दोन वर्षाकरिता मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व मिळावे ही विनंती करीत आहे.</string>
+    <string name="agreecheckbox">मी सहमत आहे</string>
+    <string name="memyear">प्रार्थमिक सदस्य २०२१ ते २०२३</string>
+    <string name="terms">मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व घेण्याची इच्छा आहे.\nमी महाराष्ट्र राज्य शिक्षण क्रांती संघटनेची घटना,नियम, ध्येय धोरणे व शिस्त यांचे पालन करून संघटनेशी प्रामाणिक राहण्याचे वचन देत आहे.\nशिक्षकांच्या न्याय्य हक्कांसाठी व शिक्षण हितासाठी संघटनेमार्फत उभारल्या जाणाऱ्या आंदोलनांना माझे सहकार्य राहील. सन २०२१ ते २०२३ या दोन वर्षाकरिता मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व मिळावे ही विनंती करीत आहे.</string>
     <string name="preference_file_key">skVerified</string>
+    <string name="dob">जन्म तारीख</string>
+    <string name="photo_for_id_card">ओळखपत्रा साठी छायाचित्र </string>
+    <string name="share_id_card">आयडी कार्ड सामायिक करा</string>
+    <string name="change_details">तपशील बदला</string>
 
 </resources>
