issue with Browse

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,6 +22,7 @@
     <string name="photo_for_id_card">Photo For ID Card</string>
     <string name="share_id_card">Share ID Card</string>
     <string name="change_details">Change Details</string>
+    <string name="welcome">Welcome</string>
 
 
 </resources>
