With Progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="agreecheckbox">I Agree</string>
     <string name="preference_file_key">skVerified</string>
     <string name="pincode">Pin Code</string>
-    <string name="terms">I would like to be a primary member of Maharashtra State Education Revolutionary Organization. \nI will continue to support the agitations for the just rights of teachers and for the benefit of education. \nFor the two years 2021-2023, I am requesting to get the primary membership of the Maharashtra State Education Revolutionary Organization.
+    <string name="terms">I would like to be a primary member of Maharashtra State Education Revolutionary Organization. \nI will continue to support the agitations for the just rights of teachers and for the benefit of education. \nFor the two years 2021-2023, I am requesting to get the primary membership of the Maharashtra Rajya Shikshan Kranti Sanghatana.
 </string>
     <string name="next">NEXT </string>
     <string name="profiledetails">PROFILE DETAILS</string>
