--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 </string>
     <string name="next">NEXT </string>
     <string name="profiledetails">PROFILE DETAILS</string>
-    <string name="dob">Date Of Birth </string>
+    <string name="dob">Date Of Birth :</string>
     <string name="photo_for_id_card">Photo For ID Card</string>
     <string name="change_details">Change Details</string>
     <string name="id_no">ID No :</string>
@@ -28,12 +28,6 @@
     <string name="name">Name :</string>
     <string name="location">Location :</string>
 
-
-    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
-        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
-        FCM registration token to logcat.</string>
-    <string name="subscribe_to_weather">Subscribe To Weather</string>
-    <string name="log_token">Log Token</string>
 
     <string name="msg_subscribed">Subscribed to Shikshan Kranti</string>
     <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
@@ -48,4 +42,10 @@
     <!-- [END fcm_default_icon_string] -->
     <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
     <string name="fcm_message">FCM Message</string>
+    <string name="designation">Designation :</string>
+    <string name="principal">Principal</string>
+    <string name="teacher">Teacher</string>
+    <string name="otherteacher">Other Staff</string>
+    <string name="schoolname">School Name :</string>
+    <string name="education">Education :</string>
 </resources>
