--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -16,7 +16,7 @@
     <string name="memyear">प्राथमिक सदस्य २०२१ ते २०२३</string>
     <string name="terms">मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व घेण्याची इच्छा आहे.\nमी महाराष्ट्र राज्य शिक्षण क्रांती संघटनेची घटना,नियम, ध्येय धोरणे व शिस्त यांचे पालन करून संघटनेशी प्रामाणिक राहण्याचे वचन देत आहे.\nशिक्षकांच्या न्याय्य हक्कांसाठी व शिक्षण हितासाठी संघटनेमार्फत उभारल्या जाणाऱ्या आंदोलनांना माझे सहकार्य राहील. सन २०२१ ते २०२३ या दोन वर्षाकरिता मला महाराष्ट्र राज्य शिक्षण क्रांती संघटना या संघटनेचे प्राथमिक सदस्यत्व मिळावे ही विनंती करीत आहे.</string>
     <string name="preference_file_key">skVerified</string>
-    <string name="dob">जन्म तारीख</string>
+    <string name="dob">जन्म तारीख :</string>
     <string name="photo_for_id_card">ओळखपत्रा साठी छायाचित्र </string>
     <string name="change_details">तपशील बदला</string>
     <string name="id_no">रजि क्र :</string>
@@ -24,13 +24,6 @@
     <string name="name">नाव :</string>
     <string name="location">ठिकाण :</string>
 
-
-
-    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
-        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
-        FCM registration token to logcat.</string>
-    <string name="subscribe_to_weather">Subscribe To Weather</string>
-    <string name="log_token">Log Token</string>
 
     <string name="msg_subscribed">Subscribed to weather topic</string>
     <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
@@ -45,4 +38,10 @@
     <!-- [END fcm_default_icon_string] -->
     <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
     <string name="fcm_message">FCM Message</string>
+    <string name="designation">पदनाम :</string>
+    <string name="principal">मुख्याध्यापक</string>
+    <string name="teacher">शिक्षक</string>
+    <string name="otherteacher">शिक्षकेतर</string>
+    <string name="schoolname">शाळा :</string>
+    <string name="education">शिक्षण :</string>
 </resources>
